--- a/wp-content/themes/sutunam/scss/page/_product-category.scss
+++ b/wp-content/themes/sutunam/scss/page/_product-category.scss
@@ -585,6 +585,7 @@
                             top: 50%;
                             right: 12px;
                         }
+                        &.ft-active,
                         &.ft-clicked {
                             background: none;
                             border: none;
